--- a/source/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/Habanero.Bo/Habanero.Bo.csproj
@@ -182,6 +182,24 @@
     <Compile Include="DataStoreInMemoryXmlWriter.cs" />
     <Compile Include="DeleteHelper.cs" />
     <Compile Include="ExceptionHelper.cs" />
+    <Compile Include="Exceptions\BOPropReadException.cs" />
+    <Compile Include="Exceptions\BOPropWriteException.cs" />
+    <Compile Include="Exceptions\BusinessObjectException.cs" />
+    <Compile Include="Exceptions\BusinessObjectNotFoundException.cs" />
+    <Compile Include="Exceptions\BusinessObjectReferentialIntegrityException.cs" />
+    <Compile Include="Exceptions\BusObjBeginEditConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjDeleteConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjDeleteException.cs" />
+    <Compile Include="Exceptions\BusObjDuplicateConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjectConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjectInAnInvalidStateException.cs" />
+    <Compile Include="Exceptions\BusObjOptimisticConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjPersistException.cs" />
+    <Compile Include="Exceptions\BusObjPessimisticConcurrencyControlException.cs" />
+    <Compile Include="Exceptions\BusObjReadException.cs" />
+    <Compile Include="Exceptions\BusObjUserConcurrencyControlExceptionBase.cs" />
+    <Compile Include="Exceptions\EditingException.cs" />
+    <Compile Include="Exceptions\InvalidPropertyValueException.cs" />
     <Compile Include="IBusinessObjectLoader.cs" />
     <Compile Include="IDataAccessor.cs" />
     <Compile Include="IDataSetProvider.cs" />
@@ -189,7 +207,6 @@
     <Compile Include="IPropRuleComparable.cs" />
     <Compile Include="Loaders\ClassDefsXmlValidator.cs" />
     <Compile Include="Loaders\XmlFilterLoader.cs" />
-    <Compile Include="Loaders\XmlTriggerLoader.cs" />
     <Compile Include="Loaders\XmlValidationResult.cs" />
     <Compile Include="Loaders\Xsds.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -244,6 +261,7 @@
     </Compile>
     <Compile Include="PropertyLink.cs" />
     <Compile Include="PropRuleDouble.cs" />
+    <Compile Include="PropRuleIntegerBase.cs" />
     <Compile Include="PropRuleLong.cs" />
     <Compile Include="PropRuleShort.cs" />
     <Compile Include="PropRuleSingle.cs" />
@@ -285,7 +303,7 @@
     <Compile Include="ClassDefinition\SingleRelationshipDef.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="HabaneroException.cs">
+    <Compile Include="Exceptions\BusObjEditableException.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CriteriaManager\Expression.cs">
@@ -356,7 +374,7 @@
     <Compile Include="RelationshipCol.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="RelationshipNotFoundException.cs">
+    <Compile Include="Exceptions\RelationshipNotFoundException.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="RelationshipObjectInitialiser.cs">
@@ -458,6 +476,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
