--- a/source/Habanero.Test.Db/packages.config
+++ b/source/Habanero.Test.Db/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FirebirdSql.Data.FirebirdClient" version="4.0.0.0" targetFramework="net40" />
   <package id="NSubstitute" version="1.6.1.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
+  <package id="System.Data.SQLite" version="1.0.89.0" targetFramework="net40" />
 </packages>
