* add ability to run FirebirdEmbedded tests * add FirebirdEmbedded test against in-field bug: count query does not   quote source fields * update other Count tests to expect appropriate table quoting * introduce FunctionQueryField base class for function extension in the   future. FunctionQueryField implements ISelfFormattingField to produce   valid sql parts representing the function at hand. Currently only   supports the functionality required to support CountQueryField but   can be extended later for other functions and parameters,   including constant values and nested function calls * introduce CountFunctionQueryField to create valid count parts for   sql statements * use CountFunctionQueryField where a count is required

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -170,12 +170,14 @@
     <Compile Include="EnumerableExtensions.cs" />
     <Compile Include="Exceptions\InvalidDefinitionException.cs" />
     <Compile Include="Exceptions\RecordedExceptionsException.cs" />
+    <Compile Include="FunctionQueryField.cs" />
     <Compile Include="HabaneroBackgroundWorker.cs" />
     <Compile Include="IActionDispatcher.cs" />
     <Compile Include="IBusinessObjectLookupList.cs" />
     <Compile Include="IDatabaseLookupList.cs" />
     <Compile Include="Encryption\IHasher.cs" />
     <Compile Include="IQueryResultLoader.cs" />
+    <Compile Include="ISelfFormattingField.cs" />
     <Compile Include="ISupportsRSADecryption.cs" />
     <Compile Include="Logging\ConsoleLoggerFactory.cs" />
     <Compile Include="Logging\IHabaneroLogger.cs" />
@@ -367,6 +369,7 @@
     <Compile Include="Data\QueryResultSorter.cs" />
     <Compile Include="RethrowingExceptionNotifier.cs" />
     <Compile Include="Encryption\RSAPasswordCrypter.cs" />
+    <Compile Include="CountFunctionQueryField.cs" />
     <Compile Include="Source.cs" />
     <Compile Include="SqlFormatter.cs" />
     <Compile Include="UIDefCol.cs" />
