* bugfix for concurrency issue when saving business objects   - actually boils down to concurrency issues when selecting     a database connection to save with

--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -156,6 +156,7 @@
     <Compile Include="IDatabaseConnectionCreator.cs" />
     <Compile Include="InsertSqlStatement.cs" />
     <Compile Include="InsertStatementGenerator.cs" />
+    <Compile Include="ManagedConnection.cs" />
     <Compile Include="ModifyStatementGenerator.cs" />
     <Compile Include="NumberGenerator\NumberGeneratorPessimisticLocking.cs" />
     <Compile Include="Param.cs" />
