Made the database test code more generalized in order to allow for running tests against SQL Server.

--- a/source/Habanero.Test/App.config
+++ b/source/Habanero.Test/App.config
@@ -1,9 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
+    <section name="DatabaseConfig" type="System.Configuration.DictionarySectionHandler" />
     <section name="DatabaseConfig_MYSQL" type="System.Configuration.DictionarySectionHandler" />
     <section name="DatabaseConfig_SQLSERVER" type="System.Configuration.DictionarySectionHandler" />
   </configSections>
+  <DatabaseConfig>
+    <add key="vendor" value="inmemory" />
+    <add key="server" value="" />
+    <add key="port" value="" />
+    <add key="database" value="" />
+    <add key="username" value="" />
+    <add key="password" value="" />
+  </DatabaseConfig>
   <DatabaseConfig_MYSQL>
     <add key="vendor" value="MySql" />
     <add key="server" value="localhost" />
