Made the Test Database Type configurable.

--- a/source/Habanero.Test/App.config
+++ b/source/Habanero.Test/App.config
@@ -5,6 +5,9 @@
     <section name="DatabaseConfig_MYSQL" type="System.Configuration.DictionarySectionHandler" />
     <section name="DatabaseConfig_SQLSERVER" type="System.Configuration.DictionarySectionHandler" />
   </configSections>
+  <appSettings>
+    <add key="DefaultTestsDBSuffix" value="MySql"/>
+  </appSettings>
   <DatabaseConfig>
     <add key="vendor" value="inmemory" />
     <add key="server" value="" />
