--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,57 +1,38 @@
-# server
-sonar.host.url=http://sonar
-sonar.jdbc.url=jdbc:jtds:sqlserver://SQL/sonar;SelectMethod=Cursor
-sonar.jdbc.username=sonar
-sonar.jdbc.password=sonar
-
-# project configuration
+# Project configuration
+# Note: It is not recommended to use the colon ':' character in the projectKey
 sonar.projectKey=chillisoft:habanero
 sonar.projectName=Habanero
-sonar.projectVersion=3.1
-sonar.language=cs
-sonar.sources=source
- 
-# optional description
 sonar.projectDescription=Habanero
- 
-# Encoding of the source code
+sonar.projectVersion=3.1
 sonar.sourceEncoding=UTF-8
- 
-# for more parameters see http://docs.codehaus.org/display/SONAR/Analysis+Parameters
 
-###### C# parameters:
-###### see http://docs.codehaus.org/display/SONAR/Running+an+Analysis+on+a+C%23+Solution
-# Additional parameters
-#Core C# Settings
-sonar.dotnet.visualstudio.solution.file=source/Habanero.sln
-sonar.dotnet.excludeGeneratedCode=true
-sonar.dotnet.4.0.sdk.directory=C:/Windows/Microsoft.NET/Framework/v4.0.30319
-sonar.dotnet.version=4.0 
+# Enable the Visual Studio bootstrapper
+sonar.visualstudio.enable=true
 
+# Visual Studio settings
+sonar.visualstudio.solution=source/Habanero.sln
+# Note: testProjectPattern requires a RegEx
+sonar.visualstudio.testProjectPattern=.*\.Test.*
 
-sonar.gallio.mode=
-sonar.gallio.coverage.tool=OpenCover
-sonar.gallio.runner=Local
-sonar.dotnet.visualstudio.testProjectPattern=Habanero.Test;Habanero.Test.BO;Habanero.Test.DB
-sonar.gallio.coverage.excludes=Habanero.Test.Structure
+# Exclude generated code
+sonar.exclusions=**/Reference.cs,**/*.designer.cs,**/*.Designer.cs,**/*.g.cs
 
-#skipping fxcop
-sonar.fxcop.mode=skip
+# Test Code inclusions (automatically excluded from source analysis)
+sonar.test.inclusions=**/*.Tests/**/*
 
-#code checkers:
-#including stylecop.  #sonar.stylecop=skip
+# Code Coverage
+#sonar.cs.ncover3.reportsPaths=coverage.nccov
+#sonar.cs.opencover.reportsPaths=buildreports/coverage.xml
+sonar.cs.dotcover.reportsPaths=buildreports/coverage.html
+#sonar.cs.vscoveragexml.reportsPaths=VisualStudio.coveragexml
 
+# Unit Test Results
+#CalcMultiplyTest.sonar.cs.vstest.reportsPaths=TestResults/CalcMultiplyTest.trx
 
-#sonar.gendarme.mode=skip
+# Javascript LCOV report
+#sonar.javascript.lcov.reportPath=source/Web/buildreports/lcov.info
 
-#including ndeps.  #sonar.ndeps.mode=skip
-
-#sonar.gallio.it.mode=active
-#sonar.gallio.it.filter=CategoryName:feature
-
-#sonar.dotnet.visualstudio.itProjectPattern=*.Specs
-
-#running using default gallio
-#sonar.gallio.mode=skip
-#sonar.gallio.coverage.reports.path=buildreports/coverage.xml
-#sonar.gallio.reports.path=nunit-result.xml
+# This property is set because it is required by the SonarQube Runner.
+# But it is not taken into account because the location of the source
+# code is retrieved from the .sln and .csproj files.
+sonar.sources=source
