--- a/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
+++ b/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Xml" />
   </ItemGroup>
