--- a/source/XamarinHabanero/Habanero.Bo/Habanero.Bo.csproj
+++ b/source/XamarinHabanero/Habanero.Bo/Habanero.Bo.csproj
@@ -40,8 +40,12 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq">
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Xml">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BOError.cs" />
