--- a/source/XamarinHabanero/Habanero.DB/Habanero.DB.csproj
+++ b/source/XamarinHabanero/Habanero.DB/Habanero.DB.csproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="key.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
