--- a/source/XamarinHabanero/Habanero.Test.DB/Habanero.Test.DB.csproj
+++ b/source/XamarinHabanero/Habanero.Test.DB/Habanero.Test.DB.csproj
@@ -150,10 +150,21 @@
       <Project>{3184ea1c-6416-4232-aa39-545f3e79a585}</Project>
       <Name>Habanero.DB</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test.BO\Habanero.Test.BO.csproj">
+      <Project>{DB8EC953-3A36-46E1-BDF8-C3D30F2A9104}</Project>
+      <Name>Habanero.Test.BO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
       <Project>{cfa9ceac-09d8-4c29-8e10-52c5160a409f}</Project>
       <Name>Habanero.Test.Structure</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
+      <Project>{91F1E27D-31C5-4FBD-A8F2-CE33FA314CF4}</Project>
+      <Name>Habanero.Test</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
