--- a/source/XamarinHabanero/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/XamarinHabanero/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -83,6 +83,10 @@
       <Project>{3184ea1c-6416-4232-aa39-545f3e79a585}</Project>
       <Name>Habanero.DB</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
+      <Project>{91F1E27D-31C5-4FBD-A8F2-CE33FA314CF4}</Project>
+      <Name>Habanero.Test</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
@@ -90,6 +94,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClassDefs.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
