More working test in Habanero.Test

--- a/source/XamarinHabanero/Habanero.Test/App.config
+++ b/source/XamarinHabanero/Habanero.Test/App.config
@@ -6,7 +6,7 @@
     <section name="DatabaseConfig_SQLSERVER" type="System.Configuration.DictionarySectionHandler" />
   </configSections>
   <appSettings>
-    <add key="DefaultTestsDBSuffix" value="MySql" />
+    <add key="DefaultTestsDBSuffix" value="" />
   </appSettings>
   <DatabaseConfig>
     <add key="vendor" value="inmemory" />
