--- a/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
+++ b/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
@@ -193,7 +193,7 @@
     <Content Include="TestResources\TestText.txt" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <EmbeddedResource Include="App.config" />
     <None Include="key.snk" />
     <None Include="packages.config" />
     <None Include="Resources\aliases.conf" />
