Added shim image library to get Bitmap stuff compiling

--- a/source/XamarinHabanero/Habanero.Test.BO/packages.config
+++ b/source/XamarinHabanero/Habanero.Test.BO/packages.config
@@ -3,4 +3,6 @@
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
+  <package id="shim" version="2.0.1" targetFramework="net452" />
+  <package id="shim.drawing" version="3.0.1" targetFramework="net452" />
 </packages>
