--- a/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
+++ b/source/XamarinHabanero/Habanero.Base/Habanero.Base.csproj
@@ -41,12 +41,17 @@
     </Reference>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
+    <Reference Include="Shim, Version=2.0.1.0, Culture=neutral, PublicKeyToken=c55ec16d10c4b366, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.2.0.1\lib\MonoAndroid1\Shim.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Shim.Drawing, Version=3.0.1.0, Culture=neutral, PublicKeyToken=a7d03c0bc8d64dbc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.drawing.3.0.1\lib\MonoAndroid1\Shim.Drawing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing">
-      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.Drawing.dll</HintPath>
-    </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Xml, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
