--- a/source/XamarinHabanero/Habanero.Test.BO/Habanero.Test.BO.csproj
+++ b/source/XamarinHabanero/Habanero.Test.BO/Habanero.Test.BO.csproj
@@ -42,12 +42,19 @@
       <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Shim, Version=2.0.1.0, Culture=neutral, PublicKeyToken=c55ec16d10c4b366, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.2.0.1\lib\net40\Shim.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Shim.Drawing, Version=3.0.1.0, Culture=neutral, PublicKeyToken=a7d03c0bc8d64dbc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.drawing.3.0.1\lib\net45\Shim.Drawing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml">
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v1.0\System.Xml.dll</HintPath>
@@ -269,7 +276,7 @@
       <Name>Habanero.DB</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
-      <Project>{CFA9CEAC-09D8-4C29-8E10-52C5160A409F}</Project>
+      <Project>{cfa9ceac-09d8-4c29-8e10-52c5160a409f}</Project>
       <Name>Habanero.Test.Structure</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
@@ -280,12 +287,17 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="BitmapResources\sample2.bmp" />
+  </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\Habanero.Test\App.config">
       <Link>App.config</Link>
     </EmbeddedResource>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="BitmapResources\sample.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
