--- a/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
+++ b/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
@@ -60,12 +60,19 @@
       <HintPath>..\..\packages\RhinoMocks.3.6.1\lib\net\Rhino.Mocks.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Shim, Version=2.0.1.0, Culture=neutral, PublicKeyToken=c55ec16d10c4b366, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.2.0.1\lib\net40\Shim.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Shim.Drawing, Version=3.0.1.0, Culture=neutral, PublicKeyToken=a7d03c0bc8d64dbc, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\shim.drawing.3.0.1\lib\net45\Shim.Drawing.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml">
       <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\MonoAndroid\v1.0\System.Xml.dll</HintPath>
@@ -155,7 +162,6 @@
     <Compile Include="TestCountFunctionQueryField.cs" />
     <Compile Include="TestFunctionQueryField.cs" />
     <Compile Include="TestHabaneroBackgroundWorker.cs" />
-    <Compile Include="TestResources.Designer.cs" />
     <Compile Include="TestUsingDatabase.cs" />
     <Compile Include="TestUtil.cs" />
     <Compile Include="TransactionCommitterStubErrorRaising.cs" />
@@ -203,7 +209,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FirebirdEmbeddedLibrariesForWindows.resx" />
-    <EmbeddedResource Include="TestResources.resx" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
