Ignored Image and Bitmap tests

--- a/source/XamarinHabanero/Habanero.Test.BO/Habanero.Test.BO.csproj
+++ b/source/XamarinHabanero/Habanero.Test.BO/Habanero.Test.BO.csproj
@@ -288,7 +288,7 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="BitmapResources\sample2.bmp" />
+    <EmbeddedResource Include="BitmapResources\sample2.bmp" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="..\Habanero.Test\App.config">
