--- a/source/XamarinHabanero/Habanero.Test.Structure/Habanero.Test.Structure.csproj
+++ b/source/XamarinHabanero/Habanero.Test.Structure/Habanero.Test.Structure.csproj
@@ -93,7 +93,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ClassDefs.xml" />
+    <EmbeddedResource Include="ClassDefs.xml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
