--- a/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
+++ b/source/XamarinHabanero/Habanero.Test/Habanero.Test.csproj
@@ -84,7 +84,6 @@
     <Compile Include="Base\DataMappers\TestDateTimeDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestGeneralDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestGuidDataMapper.cs" />
-    <Compile Include="Base\DataMappers\TestImageDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestIntDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestLongDataMapper.cs" />
     <Compile Include="Base\DataMappers\TestStringDataMapper.cs" />
@@ -206,6 +205,10 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Habanero.Base.Image\Habanero.Base.DataMapper.csproj">
+      <Project>{558358b2-e87e-46c7-80ae-da375ae86251}</Project>
+      <Name>Habanero.Base.DataMapper</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
       <Project>{407b8f2e-dcea-4eae-a183-b3417e889846}</Project>
       <Name>Habanero.Base</Name>
